--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@
 
 # Project exlude files
 config.js
+
+/database/servers/enmap.sqlite
+/database/servers/enmap.sqlite-shm
+/database/servers/enmap.sqlite-wal
+
+/database/users/enmap.sqlite
+/database/users/enmap.sqlite-shm
+/database/users/enmap.sqlite-wal
